<resources>
    <string name="app_name">PeopleInNeedCoding</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Add User</string>
    <string name="email">email</string>
    <string name="full_name">full name</string>
    <string name="user_list">User List</string>
    <string name="enter_user_information">Enter User Information</string>
</resources>